# wasm-examples

./: README.md
.github/workflows/: rust.yml
javascript/wasi/: read-stdin-write-stdout.js
rust/ubiquitous_functions/examples/wasi/: main.rs
rust/ubiquitous_functions/src/: main.rs  ubiquitous_sdk.rs
rust/wasi/print-hello-world/: Cargo.toml
