[package]
name = "print-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# Compile with Link Time Optimizations (https://rustwasm.github.io/docs/book/reference/code-size.html)
lto=true

